// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events/VenueDetails Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title grey--text font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div>
      
    Map
  
    </div>
     
    <div
      class="layout pa-3 row wrap"
    >
      <div
        class="flex xs6 pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Venue
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
          role="combobox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <input
                    aria-readonly="false"
                    autocomplete="on"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                  <div
                    class="v-select-list v-card theme--light"
                  >
                    <div
                      class="v-list theme--light"
                      role="list"
                    >
                      <div
                        role="listitem"
                      >
                        <div
                          class="v-list__tile theme--light"
                        >
                          <div
                            class="v-list__tile__content"
                          >
                            <div
                              class="v-list__tile__title"
                            >
                              No data available
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs6 pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-disabled theme--light"
          role="combobox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <input
                    aria-readonly="false"
                    autocomplete="on"
                    disabled="disabled"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--disabled material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                  <div
                    class="v-select-list v-card theme--light"
                  >
                    <div
                      class="v-list theme--light"
                      role="list"
                    >
                      <div
                        role="listitem"
                      >
                        <div
                          class="v-list__tile theme--light"
                        >
                          <div
                            class="v-list__tile__content"
                          >
                            <div
                              class="v-list__tile__title"
                            >
                              No data available
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex d-flex xs12 pb-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Address
      
        </div>
         
        <div
          class="text-xs-center"
        >
          
        -
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex d-flex xs12 py-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="text-xs-center"
        >
          
        -
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex d-flex xs12 py-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Spots
      
        </div>
         
        <div
          class="text-xs-center"
        >
          
        -
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex xs12 py-3"
      >
        <div
          class="pb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location details
      
        </div>
         
        <div>
          
        
      
        </div>
         
        <!---->
      </div>
       
      <div
        class="flex xs12"
      >
        <button
          class="ma-0 v-btn v-btn--block v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Get Directions
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`events/VenueDetails Snapshots With data 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title grey--text font-weight-bold"
    >
      
    Venue Details
  
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div>
      
    Map
  
    </div>
     
    <div
      class="layout pa-3 row wrap"
    >
      <div
        class="flex xs6 pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Venue
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
          role="combobox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    LA Stadium
                  </div>
                  <input
                    aria-readonly="false"
                    autocomplete="on"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                  <div
                    class="v-select-list v-card theme--light"
                  >
                    <div
                      class="v-list theme--light"
                      role="list"
                    >
                      <div
                        class="primary--text"
                        role="listitem"
                      >
                        <a
                          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                        >
                          <div
                            class="v-list__tile__content"
                          >
                            <div
                              class="v-list__tile__title"
                            >
                              LA Stadium
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs6 pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
          role="combobox"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    Parking Lot C
                  </div>
                  <input
                    aria-readonly="false"
                    autocomplete="on"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                  <div
                    class="v-select-list v-card theme--light"
                  >
                    <div
                      class="v-list theme--light"
                      role="list"
                    >
                      <div
                        class="primary--text"
                        role="listitem"
                      >
                        <a
                          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                        >
                          <div
                            class="v-list__tile__content"
                          >
                            <div
                              class="v-list__tile__title"
                            >
                              Parking Lot C
                            </div>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex d-flex xs12 pb-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Address
      
        </div>
         
        <div
          class="grey--text text-xs-right"
        >
          
        12345 LA Stadium Way Los Angeles, CA 90210
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex d-flex xs12 py-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="grey--text text-xs-right"
        >
          
        300 People
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex d-flex xs12 py-3"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Spots
      
        </div>
         
        <div
          class="grey--text text-xs-right"
        >
          
        30
      
        </div>
      </div>
       
      <div
        class="flex xs12"
      >
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="flex xs12 py-3"
      >
        <div
          class="pb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location details
      
        </div>
         
        <div>
          
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum sagittis nibh sed accumsan. Etiam a mauris eget turpis maximus fermentum. Suspendisse eu condimentum
      
        </div>
         
        <!---->
      </div>
       
      <div
        class="flex xs12"
      >
        <button
          class="ma-0 v-btn v-btn--block v-btn--depressed theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            
        Get Directions
      
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
